crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m143_dancing_blocks.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-143-SachenTCA01/Dancing Blocks (Sachen) [!].nes
rom_sha256=5b6a30143854bcb3f56a017abbc2bdf73127eaf18282efdc2a5520eea676d926
frames=600
fb_bytes=245760
cycles=19915252
audio_samples=528227
audio_fnv1a64=6963b6b9b6d8871b
checkpoint f600 fb_fnv1a64=fc1ae95e9712d101
