crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m147_challenge_of_the_dragon.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-147-Sachen3018-JV001/Challenge of the Dragon (Sachen) [!].nes
rom_sha256=98b94d70e4cad6c991d7e42c1e721d4bb4a2d37f386a98467da69db8e3642f3e
frames=600
fb_bytes=245760
cycles=17838524
audio_samples=439524
audio_fnv1a64=083f18defaf2a0a4
checkpoint f600 fb_fnv1a64=614f9b70a0cda2f7
