crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m150_auto_upturn.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-150-Sachen74LS374N/Auto-Upturn (Asia) (Ja) (PAL) (Unl).zip
rom_sha256=7628699245925ef49a118028a58a97f971505976d5a7dcdf4799395dbb14113d
frames=600
fb_bytes=245760
cycles=19915253
audio_samples=528227
audio_fnv1a64=6963b6b9b6d8871b
checkpoint f600 fb_fnv1a64=0d6395f1aca859d5
