crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m162_chong_wu_jin_hua_shi.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-162-WaixingFS304/Chong Wu Jin Hua Shi (Pet Evolve) (ES-1085) (Ch).nes
rom_sha256=b8f25f2276f211e285f790ef712666a0d6c1c0862cbba99a032643a24404ead0
frames=600
fb_bytes=245760
cycles=17838621
audio_samples=439526
audio_fnv1a64=7f2d3a68e80a2efe
checkpoint f600 fb_fnv1a64=89ee4c476c97a325
